--- a/ShopApp.Domain/ShopApp.Domain.csproj
+++ b/ShopApp.Domain/ShopApp.Domain.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+    <ItemGroup>
+      <ProjectReference Include="..\ShopApp.Application\ShopApp.Application.csproj" />
+    </ItemGroup>
+
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
