added jwt token generator

--- a/ShopApp.Api/appsettings.Development.json
+++ b/ShopApp.Api/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSettings": {
+    "Audience": "ShopApp",
+    "ExpiryMinutes": 120,
+    "Issuer": "ShopApp",
+    "Secret": "secret key ShopApp for JWT Token"
   }
 }
