--- a/ShopApp.Api/appsettings.json
+++ b/ShopApp.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Audience": "",
+    "ExpiryMinutes": 0,
+    "Issuer": "",
+    "Secret": ""
+  }
 }
