--- a/ShopApp.Api/appsettings.Development.json
+++ b/ShopApp.Api/appsettings.Development.json
@@ -10,5 +10,8 @@
     "ExpiryMinutes": 120,
     "Issuer": "ShopApp",
     "Secret": "secret key ShopApp for JWT Token"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=<ServerName>;Port=<PortNumber>;Database=<Your_Database>;;Username=<Your_Username>;Password=<Your_Password>"
   }
 }
