--- a/ShopApp.Application/ShopApp.Application.csproj
+++ b/ShopApp.Application/ShopApp.Application.csproj
@@ -4,6 +4,11 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ShopApp.Domain\ShopApp.Domain.csproj" />
+  </ItemGroup>
+
+  
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
