--- a/ShopApp.Api/appsettings.Development.json
+++ b/ShopApp.Api/appsettings.Development.json
@@ -12,6 +12,6 @@
     "Secret": "secret key ShopApp for JWT Token"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=<ServerName>;Port=<PortNumber>;Database=<Your_Database>;;Username=<Your_Username>;Password=<Your_Password>"
+    "DefaultConnection":"Server=127.0.0.1;Port=5432;Database=postgres;User Id=postgres;Password=gudron"
   }
 }
