--- a/ShopApp.Api/appsettings.json
+++ b/ShopApp.Api/appsettings.json
@@ -13,6 +13,6 @@
     "Secret": ""
   },
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection":"Server=127.0.0.1;Port=5432;Database=postgres;User Id=postgres;Password=gudron"
   }
 }
