added new entities, repositories product write, read logic

--- a/ShopApp.Api/appsettings.json
+++ b/ShopApp.Api/appsettings.json
@@ -18,10 +18,10 @@
   },
   "AllowedHosts": "*",
   "JwtSettings": {
-    "Audience": "",
-    "ExpiryMinutes": 0,
-    "Issuer": "",
-    "Secret": ""
+    "Audience": "ShopApp",
+    "ExpiryMinutes": 120,
+    "Issuer": "ShopApp",
+    "Secret": "secret key ShopApp for JWT Token"
   },
   "ConnectionStrings": {
     "DefaultConnection":"Server=127.0.0.1;Port=5432;Database=postgres;User Id=postgres;Password=gudron"
