added authorization logic using Bearer token

--- a/ShopApp.Api/appsettings.Development.json
+++ b/ShopApp.Api/appsettings.Development.json
@@ -3,7 +3,7 @@
     "Audience": "ShopApp",
     "ExpiryMinutes": 120,
     "Issuer": "ShopApp",
-    "Secret": "secret key ShopApp for JWT Token"
+    "Secret": ""
   },
   "ConnectionStrings": {
     "DefaultConnection":"Server=127.0.0.1;Port=5432;Database=postgres;User Id=postgres;Password=gudron"
