--- a/ShopApp.Api/appsettings.json
+++ b/ShopApp.Api/appsettings.json
@@ -21,7 +21,7 @@
     "Audience": "ShopApp",
     "ExpiryMinutes": 120,
     "Issuer": "ShopApp",
-    "Secret": "secret key ShopApp for JWT Token"
+    "Secret": "secret_key_ShopApp_for_JWT_Token"
   },
   "ConnectionStrings": {
     "DefaultConnection":"Server=127.0.0.1;Port=5432;Database=postgres;User Id=postgres;Password=gudron"
