--- a/ShopApp.Api/appsettings.Development.json
+++ b/ShopApp.Api/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
   "JwtSettings": {
     "Audience": "ShopApp",
-    "ExpiryMinutes": 1,
+    "ExpiryMinutes": 60,
     "Issuer": "ShopApp",
-    "Secret": ""
+    "Secret": "secret_key_ShopApp_for_JWT_Token"
   },
   "ConnectionStrings": {
     "DefaultConnection":"Server=127.0.0.1;Port=5432;Database=postgres;User Id=postgres;Password=gudron"
